# Foxy_Communication-Waypoint

./: .~lock.relative_waypoints.csv#  README.md  relative_waypoints.csv  test.py
For_Yolo/: client_test.py  ubuntu_client.py
install/: local_setup.sh  setup.sh
install/communication_launch/share/communication_launch/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/communication_launch/share/communication_launch/launch/: start_both.launch.py
install/coordinate_publisher/lib/coordinate_publisher/: coordinate_publisher
install/coordinate_publisher/share/coordinate_publisher/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/mqtt_subscriber/lib/mqtt_subscriber/: mqtt_subscriber
install/mqtt_subscriber/share/mqtt_subscriber/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/waypoint_converter/lib/waypoint_converter/: waypoint_converter
install/waypoint_converter/share/waypoint_converter/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
log/: latest_build
src/communication_launch/: setup.cfg  setup.py
src/coordinate_publisher/: setup.py
src/mqtt_subscriber/: package.xml  setup.py
src/mqtt_subscriber/mqtt_subscriber/: mqtt_subscriber.py
src/waypoint_converter/: setup.cfg  setup.py
src/waypoint_converter/waypoint_converter/: waypoint_converter.py
