<package format="2">
  <name>coordinate_publisher</name>
  <version>0.0.0</version>
  <description>A simple coordinate publisher for ROS2</description>

  <maintainer email="your_email@example.com">your_name</maintainer>
  <license>License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rclpy</build_depend>
  <build_depend>std_msgs</build_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
